# local-music-player

./: .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  install.sh  mkdocs.yml  start.sh
android-client/: index.html
backend/: alembic.ini  index.html  pyproject.toml  requirements.txt
backend/api/: index.html
backend/api/queue/: index.html
backend/api/stream/: index.html
backend/api/tracks/: index.html
backend/api/urls/: index.html
backend/api/youtube/: index.html
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  queue.py  router.py  settings.py  stream.py  syncthing.py  tracks.py  urls.py  youtube_playlists.py
backend/app/services/: file_service.py  syncthing_service.py  youtube_api_service.py  ytdlp_service.py
backend/app/tasks/: celery_app.py  download.py  scheduler.py  sync_playlist.py
backend/configuration/: index.html
backend/database/: index.html
backend/migrations/: env.py
backend/migrations/versions/: d8524591de41_initial_schema.py
backend/services/: index.html
backend/services/file/: index.html
backend/services/syncthing/: index.html
backend/services/youtube-api/: index.html
backend/services/ytdlp/: index.html
backend/tasks/: index.html
backend/tasks/download/: index.html
backend/tasks/sync-playlist/: index.html
backend/tests/: conftest.py  test_download_paths.py  test_health.py  test_queue.py  test_schemas.py  test_settings.py  test_sync_playlist_paths.py  test_syncthing.py  test_tracks.py  test_urls.py  test_youtube_playlists.py
(+63 files in other folders)
